--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,16 @@
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* input[type=number] {
+  -moz-appearance: textfield;
+} */
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
